<?xml version="1.0"?>
<package format="2">
  <name>calib_gzb</name>
  <version>0.0.1</version>
  <description>Gazebo simulation world for LiDAR + Radar calibration test.</description>

  <maintainer email="bjn@example.com">bjn</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- 如果将来加C++代码就保留 roscpp -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Gazebo ROS 集成 -->
  <exec_depend>gazebo_ros</exec_depend>

  <export>
  </export>
</package>
